After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707641 - `FILTER_SOURCE_FILES=YES` required to build CALL_GRAPHS
`FILTER_SOURCE_FILES=YES` required to build CALL_GRAPHS
Status: RESOLVED FIXED
Product: doxygen
Classification: Other
Component: general
1.8.5-GIT
Other All
: Normal normal
: ---
Assigned To: Dimitri van Heesch
Dimitri van Heesch
Depends on:
Blocks:
 
 
Reported: 2013-09-06 16:21 UTC by Sergio Oller
Modified: 2013-12-24 19:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
A script to reproduce the bug (23.52 KB, application/x-compressed-tar)
2013-09-06 16:21 UTC, Sergio Oller
Details

Description Sergio Oller 2013-09-06 16:21:38 UTC
Created attachment 254273 [details]
A script to reproduce the bug

Bug report: `FILTER_SOURCE_FILES=YES` required to build CALL_GRAPHS
=======================================

CALL/CALLER graphs are not created if FILTER_SOURCE_FILES=NO and a filter is used.

It is not possible to view the graphs and browse the original source files at the same time.

Attached is a tgz file with a sample code, a sample filter and a script which will reproduce the error.


## Reproduce the error:

When running the attached `./test_error.sh`, two output directories are created:
  - `works_fine` shows the `CALL_GRAPHS` and `CALLER_GRAPHS` properly
    at the expense of browsing the filtered sources (I prefer the unfiltered version).

  - `no_caller_graphs` fails to generate the `CALL_GRAPHS` and `CALLER_GRAPHS`.
    The only difference in the setup is: `FILTER_SOURCE_FILES = NO`.
    I would expect to browse the unfiltered source files but to be able to
    see the call graphs.

Thanks in advance for any support. Any help or suggestion will be appreciated.

Sergio
Comment 1 Sergio Oller 2013-09-14 18:24:32 UTC
Pull request to fix this bug available at:

https://github.com/doxygen/doxygen/pull/35
Comment 2 Dimitri van Heesch 2013-09-28 22:08:42 UTC
Thanks, I'll include an improved version of your patch in the next GIT update.
Comment 3 Dimitri van Heesch 2013-12-24 19:00:12 UTC
This bug was previously marked ASSIGNED, which means it should be fixed in
doxygen version 1.8.6. Please verify if this is indeed the case. Reopen the
bug if you think it is not fixed and please include any additional information 
that you think can be relevant (preferrably in the form of a self-contained example).