src/code.h
@@ -29,7 +29,8 @@ class Definition;
 void parseCCode(CodeOutputInterface &,const char *,const QCString &, 
             SrcLangExt lang, bool isExample, const char *exName,FileDef *fd,
             int startLine,int endLine,bool inlineFragment,
-            MemberDef *memberDef,bool showLineNumbers,Definition *searchCtx);
+            MemberDef *memberDef,bool showLineNumbers,Definition *searchCtx,
+            bool collectXRefs);
 void resetCCodeParserState();
 void codeFreeScanner();
 
