src/pyscanner.h
@@ -55,7 +55,8 @@ class PythonLanguageScanner : public ParserInterface
                    bool inlineFragment=FALSE,
                    MemberDef *memberDef=0,
                    bool showLineNumbers=TRUE,
-                   Definition *searchCtx=0
+                   Definition *searchCtx=0,
+                   bool collectXrefs=TRUE
                   );
     void resetCodeParserState();
     void parsePrototype(const char *text);
